<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_url"/>

    <EditText
        android:id="@+id/edt_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_url"
        android:inputType="textUri"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btn_start_date"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginRight="3dp"
            android:layout_weight="1"
            android:background="@color/lightGrey"
            android:ems="10"
            android:paddingLeft="@dimen/default_small_margin"
            android:text="@string/start_date"/>


        <Button
            android:id="@+id/btn_start_time"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:background="@color/lightGrey"
            android:ems="10"
            android:enabled="false"
            android:paddingLeft="@dimen/default_small_margin"
            android:text="@string/start_time"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:visibility="gone"
        >

        <Button
            android:id="@+id/btn_stop_time"
            android:layout_width="0dp"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginRight="3dp"
            android:background="@color/lightGrey"
            android:ems="10"
            android:paddingLeft="@dimen/default_small_margin"
            android:text="@string/stop_time"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/edit_text_height"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/tv_repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repeat"
                />

            <CheckBox
                android:id="@+id/cb_repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:enabled="false"
                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:text="@string/ok"
            />
    </LinearLayout>
</LinearLayout>