<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/download_path"
       />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/btn_path"
        android:background="@color/lightGrey"
        android:layout_marginRight="3dp"
        tools:text="@string/dummy_path"
        android:paddingLeft="@dimen/default_small_size"
        android:inputType="textUri"
        android:gravity="left|center_vertical"
        android:layout_marginTop="@dimen/row_bottom_margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/btn_cancel"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:id="@+id/btn_ok"
            android:layout_gravity="right"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>